--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "dom-to-image": "^2.6.0",
     "element-plus": "^2.4.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5"
