--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
     "dom-to-image": "^2.6.0",
     "element-plus": "^2.4.1",
+    "html2canvas": "^1.4.1",
+    "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5"
   },
