--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dom-to-image": "^2.6.0",
     "element-plus": "^2.4.1",
     "html2canvas": "^1.4.1",
+    "mitt": "^3.0.1",
     "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
